# RoomControl_old

./: .gitignore  LICENSE
Display/: Bitmap.cpp  Bitmap.hpp  Font.cpp  Font.hpp  tahoma_8pt.hpp
Emulator/: Action.cpp  Action.hpp  Actor.hpp  ActorValues.cpp  ActorValues.hpp  Array.hpp  Blind.cpp  Button.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Config.hpp  Device.cpp  Device.hpp  DeviceState.cpp  DeviceState.hpp  Display.cpp  Display.hpp  EnOceanProtocol.cpp  EnOceanProtocol.hpp  Event.hpp  Flash.cpp  Flash.hpp  Light.cpp  Poti.cpp  Poti.hpp  Scenario.hpp  Serial.cpp  Serial.hpp  Storage.cpp  Storage.hpp  String.hpp  System.cpp  System.hpp  Ticker.cpp  Ticker.hpp  Timer.hpp  Widget.cpp  Widget.hpp  main.cpp  (+1 more)
Emulator/gui/: Blind.cpp  Blind.hpp  Button.hpp  DeviceWidget.hpp  Light.cpp  Light.hpp  MotionDetector.hpp  Poti.cpp  Temperature.cpp  Widget.cpp
cad/: box.scad  switch.scad
emulator/: .gitignore  Bus.cpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Context.hpp  Display.cpp  Display.hpp  DownLink.cpp  DownLink.hpp  Flash.cpp  Gui.cpp  Gui.hpp  Inputs.cpp  Inputs.hpp  Lin.cpp  Lin.hpp  Network.hpp  Outputs.cpp  Outputs.hpp  SteadyTimer.cpp  SteadyTimer.hpp  SystemTimer.cpp  SystemTimer.hpp  Ticker.hpp  Udp6.cpp  Udp6.hpp  UpLink.cpp  UpLink.hpp  conanfile.py  global.cpp  global.hpp  main.cpp  testBroker.cpp
emulator/gui/: Blind.hpp  Button.cpp  DeviceWidget.cpp  DeviceWidget.hpp  Display.cpp  LayoutManager.hpp  Light.hpp  Poti.hpp  Temperature.cpp  Temperature.hpp
hardware/: RoomControl.lib  RoomControl.net  fp-lib-table  order.py  sym-lib-table
hardware/RoomControl.pretty/: ALPS-BOURNS-EC12.kicad_mod  Battery_2032.kicad_mod  Bourns_PEC12R.kicad_mod  Converter_ACDC_HiLink_HLK-PMxx.kicad_mod  D203S.kicad_mod  DiodeHoles.kicad_mod  DiodeHoles3.kicad_mod  E73-2G4M08S1C-52840.kicad_mod  HiLink_HLK-PMxx.kicad_mod  Jumper2.kicad_mod  Jumper2Triangular.kicad_mod  MOC3043.kicad_mod  NCV7726B.kicad_mod  Omron_D2F-01.kicad_mod  Omron_G6SU-2.kicad_mod  On_MOC3043.kicad_mod  On_NCV7428MW.kicad_mod  On_NCV7726B.kicad_mod  On_NCV77xx.kicad_mod  Relay_DPDT_Omron_G6SU-2.kicad_mod  S10K275.kicad_mod  STM32F042F6.kicad_mod  Switch_Mount.kicad_mod  TPS82130.kicad_mod  Texas_TPS82130.kicad_mod  WAGO-236-410.kicad_mod  Wago_236-403.kicad_mod  Wago_236-405.kicad_mod  Wago_236-406.kicad_mod  Wago_236-407.kicad_mod  Wago_236-410.kicad_mod  generator.py
hardware/gerber/: drill2cad.py
hardware/main/: bom.txt  main-cache.lib  main.kicad_pcb  main.pro  main.sch  sym-lib-table
hardware/switch/: bom.txt  switch-cache.lib  switch.kicad_pcb  switch.pro  switch.sch
software/: Action.hpp  Array.hpp  ArrayList.hpp  Bitmap.hpp  Button_.hpp  Clock.hpp  Device.hpp  DeviceState.cpp  EnOceanProtocol.hpp  Event.hpp  Flash.hpp  Font.cpp  Font.hpp  MqttSnBroker.cpp  MqttSnBroker.hpp  MqttSnClient.cpp  MqttSnClient.hpp  RoomControl.cpp  RoomControl.hpp  Storage.cpp  Storage.hpp  String.cpp  String.hpp  StringBuffer.hpp  System.cpp  System.hpp  SystemTime.hpp  Timer.hpp  TopicBuffer.cpp  TopicBuffer.hpp  convert.cpp  convert.hpp  optional.hpp  util.hpp
software/switch/: Makefile  main.c
software/switch/stmcube/: switch.ioc
stm32f0/: Clock.cpp  Flash.cpp  Makefile  MotionDetector.hpp  Poti.hpp  Serial.cpp  Serial.hpp  Temperature.hpp  Ticker.hpp  assert.hpp  config.hpp  main.cpp
